# RottenBot_ExpTracking

./: .gitignore  Dockerfile.mlflow  README.md  docker-compose.yaml  download_artifacts.ipynb  pyproject.toml
src/rotten_bot/: create_experiment.py  experiments_config.py  run_experiment.py  split_folders.py
src/rotten_bot/notebooks/: experiment_utils.ipynb  experiments_config.py  run_experiments.ipynb
src/rotten_bot/utils/: __init__.py  get_git_sha.py
src/rotten_bot/utils/etl/: get_datasets.py  get_true_labels_dataset.py  split_folder.py
src/rotten_bot/utils/model_evaluation/: save_confusion_matrix.py  save_model_history.py  save_prediction_time.py  save_predictions_csv.py  save_wrong_predictions_plot.py
src/rotten_bot/utils/model_training/: compute_class_weights.py
src/smart_recycling/notebooks/: experiments_config.py  run_experiments.ipynb
src/smart_recycling/utils/: __init__.py
